--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
+
+
+<!-- https://github.com/aws/aws-amplify/issues/678 fix: -->
+<script>
+  if (global === undefined) {
+    var global = window;
+  }
+</script>
+<!-- https://github.com/aws/aws-amplify/issues/678 fix end-->
+
+
   <meta charset="utf-8">
   <title>BillYourself</title>
   <base href="/">
@@ -9,6 +20,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
 </body>
 </html>
